# ndetect

./: .editorconfig  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  flake.nix  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  security_issue.md
.github/workflows/: ci.yml
.pre-commit-hooks/: dmypy_check.py
ndetect/: __init__.py  analysis.py  cli.py  exceptions.py  logging.py  minhash.py  models.py  operations.py  py.typed  signatures.py  similarity.py  symlinks.py  text_detection.py  types.py  ui.py  utils.py
ndetect/stubs/datasketch/: __init__.pyi
scripts/: cleanup.sh  dev.sh
tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_dry_run.py  test_error_handling.py  test_interaction.py  test_keeper.py  test_minhash.py  test_models.py  test_operations.py  test_preview.py  test_similarity.py  test_symlink_handler.py  test_symlinks.py  test_table.py  test_text_detection.py  test_textfile.py  test_ui.py  test_utils.py
typings/datasketch/: __init__.pyi
