[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ndetect"
version = "0.1.0"
description = "A CLI tool for detecting near-duplicate text files using MinHash"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "datasketch>=1.5.0",  # For MinHash implementation
    "rich>=13.0.0",       # For interactive CLI interface
    "numpy>=1.24.0",      # For MinHash array operations
    "networkx>=3.2.0",
]

[project.scripts]
ndetect = "ndetect.cli:main"

[tool.setuptools.packages.find]
include = ["ndetect*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-setuptools>=69.0.0",
    "datasketch>=1.5.0",
    "numpy>=1.24.0",
    "types-networkx>=3.2.0",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project
'''
